[package]
name = "pinginrust"
version = "0.1.0"
authors = ["nataliescottdavidson <davidsonnatalies@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validators = "0.20.16"
dns-lookup = "1.0.1"
pnet = "0.25.0"
bincode = "1.2.1"
pnet_macros_support = "0.5.0"
